# Camgen

./: .gitignore  AUTHORS  Doxyfile  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool  license.h
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
doc/form/: T.frm  T.txt  TT.frm  TT.txt  TT_contr.frm  TT_contr.txt  TT_min.frm  TT_min.txt  TT_plus.frm  TT_plus.txt  coltens.frm  d.frm  d.txt  dd.frm  dd.txt  dd_min.frm  dd_min.txt  dd_plus.frm  dd_plus.txt  f.frm  f.txt  ff_contr.frm  ff_contr.txt  g4vertex.frm
doc/html/: a00001.html  a00002.html  a00003.html  a00004.html  a00005.html  a00006.html  a00007.html  a00008.html  a00009.html  a00010.html  a00011.html  a00012.html  a00013.html  a00014.html  a00015.html  a00016.html  a00017.html  a00018.html  a00019.html  a00020.html  a00021.html  a00022.html  a00023.html  a00024.html  a00025.html  a00026.html  a00027.html  a00028.html  a00029.html  a00030.html  a00031.html  a00032.html  a00033.html  a00034.html  a00035.html  a00036.html  a00037.html  a00038.html  a00039.html  a00040.html  (+1795 more)
doc/latex/: a00001.eps  a00001.tex  a00002.eps  a00002.tex  a00003.eps  a00003.tex  a00004.eps  a00004.tex  a00005.eps  a00005.tex  a00006.eps  a00006.tex  a00007.eps  a00007.tex  a00008.eps  a00008.tex  a00009.eps  a00009.tex  a00010.eps  a00010.tex  a00011.eps  a00011.tex  a00012.eps  a00012.tex  a00013.tex  a00014.eps  a00014.tex  a00015.eps  a00015.tex  a00016.eps  a00016.tex  a00017.eps  a00017.tex  a00018.eps  a00018.tex  a00019.eps  a00019.tex  a00020.eps  a00020.tex  a00021.eps  (+1095 more)
examples/: Makefile  Makefile.am  Makefile.in  SMseesaw.cpp  SMseesaw.h  example1.cpp  example1.txt  example2.cpp  example2.txt  example3.cpp  scalar_model.cpp  scalar_model.h
include/: Makefile  Makefile.am  Makefile.in
include/Camgen/: .ps_gen.h.swp  .ps_tree.h.swp  Breit_Wigner.h  CM_algo.h  Dirac_alg.h  Dirac_delta.h  Dirac_dim.h  EWSM.h  EWSM_base.h  Euclidean.h  Herwig_if.h  KS_type.h  KSspinPb.h  KSspinWb.h  LHE_if.h  LH_evt_stream.h  LH_if.h  Legendre.h  Lorentz.h  MC_config.h  MC_gen.h  MC_int.h  MC_int_base.h  MC_integral.h  MC_obj_gen.h  Maj_basis.h  Minkowski.h  Pauli_basis.h  Pythia_if.h  QCD.h  QCD_base.h  QCD_cols.h  QED.h  QED_base.h  R_gauge.h  SM.h  SM_base.h  SM_params.h  T.h  TT.h  (+257 more)
lib/: Makefile  Makefile.am  Makefile.in
lib/.deps/: Dirac_dim.Plo  EWSM.Plo  MC_config.Plo  QCD.Plo  QED.Plo  SM.Plo  WZM.Plo  bipart.Plo  license_print.Plo  logstream.Plo  lower_binom.Plo  num_config.Plo  pdf_wrapper.Plo  phi3.Plo  phi34.Plo  plt_config.Plo  plt_obj.Plo  plt_script.Plo  plt_strm.Plo  ps_cut.Plo  rcarry.Plo  scalar_QED.Plo  spin.Plo  stdrand.Plo  susy_QCD.Plo  susy_QED.Plo  unused.Plo
lib/.libs/: .gitignore
src/: Dirac_dim.cpp  EWSM.cpp  MC_config.cpp  Makefile  Makefile.am  Makefile.in  QCD.cpp  QED.cpp  SM.cpp  WZM.cpp  bipart.cpp  file_utils.cpp  license_print.cpp  logstream.cpp  lower_binom.cpp  multi_plot.cpp  num_config.cpp  pdf_wrapper.cpp  phi3.cpp  phi34.cpp  plt_config.cpp  plt_obj.cpp  plt_script.cpp  plt_strm.cpp  ps_cut.cpp  rcarry.cpp  root_tree.cpp  scalar_QED.cpp  spin.cpp  stdrand.cpp  susy_QCD.cpp  susy_QED.cpp  unused.cpp
src/.deps/: Paulitest.Po  Pauliwftest.Po  Weylwftest.Po  bstest.Po  cont_coltest.Po  discr_coltest.Po  logger.Po  lower_binom.Po
test/: .gitignore  LHAPDF_test  LHAPDF_test.cpp  LHE_if_test.cpp  LH_evt_test.cpp  Lorentz_test.cpp  MC_col_test  MC_col_test.cpp  MC_gen_test  MC_gen_test.cpp  MC_hel_test  MC_hel_test.cpp  Makefile  Makefile.am  Makefile.in  Parke_Taylor_cc_test  Parke_Taylor_cc_test.cpp  Parke_Taylor_dc_test  Parke_Taylor_dc_test.cpp  Pauli_basis_test  Pauli_basis_test.cpp  Pauli_spinor_test  Pauli_spinor_test.cpp  QCDPbchabcc.cpp  QCDPbchabcc.h  QCDPbchabcc_clone.cpp  QCDPbchabcc_clone.h  QCDPbchabdc.cpp  QCDPbchabdc.h  QCDPbchcfcc.cpp  QCDPbchcfcc.h  QCDPbchcfcc_clone.cpp  QCDPbchcfcc_clone.h  QCDPbchcfdc.cpp  QCDPbchcfdc.h  QCDPbchcfdc_clone.cpp  QCDPbchcfdc_clone.h  QCDPbdhcfcc.cpp  QCDPbdhcfcc.h  QCDPbdhcfdc.cpp  (+109 more)
test/.deps/: LHAPDF_test.Po  MC_col_test.Po  MC_gen_test.Po  MC_hel_test.Po  Parke_Taylor_cc_test.Po  Parke_Taylor_dc_test.Po  Pauli_basis_test.Po  Pauli_spinor_test.Po  QCDPbchabcc.Plo  QCDPbchabcc_clone.Plo  QCDPbchabdc.Plo  QCDPbchcfcc.Plo  QCDPbchcfcc_clone.Plo  QCDPbchcfdc.Plo  QCDPbchcfdc_clone.Plo  QCDPbdhcfcc.Plo  QCDPbdhcfdc.Plo  QCD_procs_test.Po  QCDcc_test.Po  QCDdc_test.Po  QEDPbKsdh.Plo  QEDPbch.Plo  QEDPbdh.Plo  QEDPbpsdh.Plo  QEDWbKsdh.Plo  QEDWbch.Plo  QEDWbdh.Plo  QEDWbpsdh.Plo  QEDch_test.Po  QEDdh_test.Po  SMPbKsch.Plo  SMWbhsch.Plo  SM_params_test.Po  SM_test.Po  Weyl_basis_test.Po  Weyl_spinor_test.Po  bitstring_test.Po  cont_cols_test.Po  discr_cols_test.Po  m_spinor_test.Po  (+18 more)
test/.libs/: LHAPDF_test  MC_col_test  MC_gen_test  MC_hel_test  Parke_Taylor_cc_test  Parke_Taylor_dc_test  Pauli_basis_test  Pauli_spinor_test  QCD_procs_test  QCDdc_test  QEDch_test  QEDdh_test  SM_params_test  SM_test  Weyl_basis_test  Weyl_spinor_test  bitstring_test  cont_cols_test  discr_cols_test  parni_test  phi34_graphs_test  phi3_graphs_test  ps_reverse_test  ps_tree_test  ps_vars_test  s_int_test  save_load_test  susy_Kunszt_test  susy_QCDcc_test  susy_QCDdc_test  susy_QED_test
test/plots/: BWBW1_int.eps  BWBW2_int.eps  BWBW3_int.eps  BWDd_int.eps  BWpl_int.eps  BWuni_int.eps  Breit_Wigner1.eps  Breit_Wigner2.eps  Breit_Wigner3.eps  Higgs_width.eps  W_ln.eps  W_ln~.eps  alpha_s.eps  circle.eps  colMC1.eps  colMC2.eps  colMC3.eps  ee_2W2n.eps  ee_2W2n~.eps  ee_2Z2n.eps  ee_2Z2n~.eps  ee_2mu2ne.eps  ee_2mu2ne~.eps  ee_2mu2nmu.eps  ee_2mu2nmu~.eps  ee_2n.eps  ee_2n~.eps  ee_h2n.eps  ee_h2n~.eps  ee_ll.eps  ee_ll~.eps  ee_qqbarl3n.eps  emu_2n.eps  emu_2n~.eps  emu_h2n.eps  emu_h2n~.eps  h_2l2n2.eps  h_2l2n2~.eps  h_WW*_2l2n.eps  h_WW*_2l2n~.eps  (+37 more)
