Camgendir=$(includedir)/Camgen

Camgen_HEADERS = Camgen/adj_rep.h		\
		 Camgen/adjoint.h		\
		 Camgen/ascii_if.h		\
		 Camgen/asymtvv.h		\
		 Camgen/bipart.h		\
		 Camgen/bit_string.h		\
		 Camgen/branching.h		\
		 Camgen/Breit_Wigner.h		\
		 Camgen/bspart.h		\
		 Camgen/chain_if.h		\
		 Camgen/charge_conj.h		\
		 Camgen/CM_algo.h		\
		 Camgen/col_flow.h		\
		 Camgen/col_gen.h		\
		 Camgen/col_macros.h		\
		 Camgen/colgen_fac.h		\
		 Camgen/combs.h			\
		 Camgen/comp_contr.h		\
		 Camgen/comp_vert.h		\
		 Camgen/compose.h		\
		 Camgen/curr_iter_comp.h	\
		 Camgen/current.h		\
		 Camgen/current_tree.h		\
		 Camgen/d.h			\
		 Camgen/dd.h			\
		 Camgen/dd_min.h		\
		 Camgen/dd_plus.h		\
		 Camgen/debug.h			\
		 Camgen/decomp_proc.h		\
		 Camgen/def_args.h		\
		 Camgen/dilog.h			\
		 Camgen/Dirac_alg.h		\
		 Camgen/Dirac_delta.h		\
		 Camgen/Dirac_dim.h		\
		 Camgen/Euclidean.h		\
		 Camgen/eval.h			\
		 Camgen/evt_gen.h		\
		 Camgen/EWSM.h			\
		 Camgen/EWSM_base.h		\
		 Camgen/f.h			\
		 Camgen/f_helper.h		\
		 Camgen/fastYM4v.h		\
		 Camgen/fermion.h		\
		 Camgen/fermion_prop.h		\
		 Camgen/ff_contr.h		\
		 Camgen/ff_contr_helper.h	\
		 Camgen/flav_comp.h		\
		 Camgen/forward_decs.h		\
		 Camgen/fundam_rep.h		\
		 Camgen/fusion_class.h		\
		 Camgen/fusion_cont.h		\
		 Camgen/gen_conf.h		\
		 Camgen/gen_if.h		\
		 Camgen/ggg.h			\
		 Camgen/gggg.h			\
		 Camgen/group.h			\
		 Camgen/h_width.h		\
		 Camgen/had_is.h		\
		 Camgen/has_leg.h		\
		 Camgen/hel_gen.h		\
		 Camgen/helgen_fac.h		\
		 Camgen/hel_type.h		\
		 Camgen/helspinPb.h		\
		 Camgen/helspinWb.h		\
		 Camgen/Herwig_if.h		\
		 Camgen/histogram.h		\
		 Camgen/if_base.h		\
		 Camgen/if_engine.h		\
		 Camgen/if_output.h		\
		 Camgen/init_state.h		\
		 Camgen/interaction.h		\
		 Camgen/inv_cosh.h		\
		 Camgen/inv_gen.h		\
		 Camgen/isgen_fac.h		\
		 Camgen/KSspinPb.h		\
		 Camgen/KSspinWb.h		\
		 Camgen/KS_type.h		\
		 Camgen/Legendre.h		\
		 Camgen/LH_if.h			\
		 Camgen/LHE_if.h		\
		 Camgen/license_print.h		\
		 Camgen/logstream.h		\
		 Camgen/long_hels.h		\
		 Camgen/Lorentz.h		\
		 Camgen/lower_binom.h		\
		 Camgen/m_fermion_wfunc.h	\
		 Camgen/m_spinor_fac.h		\
		 Camgen/m_vector_wfunc.h	\
		 Camgen/Maj_basis.h		\
		 Camgen/matrix_el.h		\
		 Camgen/MC_config.h		\
		 Camgen/MC_gen.h		\
		 Camgen/MC_int.h		\
		 Camgen/MC_obj_gen.h		\
		 Camgen/Minkowski.h		\
		 Camgen/model_wrapper.h		\
		 Camgen/model.h			\
		 Camgen/multiplot.h		\
		 Camgen/name_comp.h		\
		 Camgen/num_config.h		\
		 Camgen/norm_gen.h		\
		 Camgen/p_channel.h		\
		 Camgen/parni.h			\
		 Camgen/parni_bin.h		\
		 Camgen/parni_it.h		\
		 Camgen/parni_sub.h		\
		 Camgen/part_family.h		\
		 Camgen/part_is.h		\
		 Camgen/part_painter.h		\
		 Camgen/part_seq.h		\
		 Camgen/particle.h		\
		 Camgen/Pauli_basis.h		\
		 Camgen/pdf_wrapper.h		\
		 Camgen/permute.h		\
		 Camgen/phase_space.h		\
		 Camgen/phi3.h			\
		 Camgen/phi34.h			\
		 Camgen/plt_config.h		\
		 Camgen/plt_obj.h		\
		 Camgen/plt_script.h		\
		 Camgen/plt_strm.h		\
		 Camgen/pol_type.h		\
		 Camgen/polspinPb.h		\
		 Camgen/polspinWb.h		\
		 Camgen/power_law.h		\
		 Camgen/ppranknum.h		\
		 Camgen/proc_gen.h		\
		 Camgen/process.h		\
		 Camgen/process_tree.h		\
		 Camgen/product_type.h		\
		 Camgen/prop_samplers.h		\
		 Camgen/ps_channel.h		\
		 Camgen/ps_copy.h		\
		 Camgen/ps_cut.h		\
		 Camgen/ps_decl.h		\
		 Camgen/ps_fac.h		\
		 Camgen/ps_gen.h		\
		 Camgen/ps_gen_base.h		\
		 Camgen/ps_tree.h		\
		 Camgen/ps_vol.h		\
		 Camgen/psgen_fac.h		\
		 Camgen/Pythia_if.h		\
		 Camgen/QCD.h			\
		 Camgen/QCD_base.h		\
		 Camgen/qcd_cols.h		\
		 Camgen/QED.h			\
		 Camgen/QED_base.h		\
		 Camgen/R_gauge.h		\
		 Camgen/rambo.h			\
		 Camgen/rcarry.h		\
		 Camgen/rep.h			\
		 Camgen/rn_strm.h		\
		 Camgen/root_if.h		\
		 Camgen/s_branch.h		\
		 Camgen/s_branch_back.h		\
		 Camgen/s_gen.h			\
		 Camgen/s_int.h			\
		 Camgen/scalar_contr.h		\
		 Camgen/scalar_particle.h	\
		 Camgen/scalar_prop.h		\
		 Camgen/scalar_QED.h		\
		 Camgen/scale_expr.h		\
		 Camgen/sff.h			\
		 Camgen/sff5.h			\
		 Camgen/sffL.h			\
		 Camgen/sffLR.h			\
		 Camgen/sffR.h			\
		 Camgen/sffVA.h			\
		 Camgen/sgen_grid.h		\
		 Camgen/SM.h			\
		 Camgen/SM_base.h		\
		 Camgen/SM_params.h		\
		 Camgen/spacetime.h		\
		 Camgen/spin.h			\
		 Camgen/spinbase_EM.h		\
		 Camgen/spinbase_EP.h		\
		 Camgen/spinbase_EW.h		\
		 Camgen/spinfacPb.h		\
		 Camgen/spinfacWb.h		\
		 Camgen/spinor_contr.h		\
		 Camgen/spinor_fac.h		\
		 Camgen/sss.h			\
		 Camgen/ssss.h			\
		 Camgen/ssvv.h			\
		 Camgen/static_comp.h		\
		 Camgen/stdrand.h		\
		 Camgen/su(n).h			\
		 Camgen/sum_branch.h		\
		 Camgen/sum_branch_back.h	\
		 Camgen/summation.h		\
		 Camgen/susy_params.h		\
		 Camgen/susy_QCD.h		\
		 Camgen/susy_QCD_base.h		\
		 Camgen/susy_QED.h		\
		 Camgen/susy_QED_base.h		\
		 Camgen/svv.h			\
		 Camgen/symtvv.h		\
		 Camgen/T.h			\
		 Camgen/t_branch.h		\
		 Camgen/t_branch_back.h		\
		 Camgen/T_helper.h		\
		 Camgen/tens.h			\
		 Camgen/tens_it.h		\
		 Camgen/tensor.h		\
		 Camgen/TT.h			\
		 Camgen/TT_contr.h		\
		 Camgen/TT_contr_helper.h	\
		 Camgen/TT_helper.h		\
		 Camgen/TT_min.h		\
		 Camgen/TT_min_helper.h		\
		 Camgen/TT_plus.h		\
		 Camgen/TT_plus_helper.h	\
		 Camgen/type_holders.h		\
		 Camgen/undef_args.h		\
		 Camgen/uni_cols.h		\
		 Camgen/uni_hels.h		\
		 Camgen/uni_s.h			\
		 Camgen/uni_sphere.h		\
		 Camgen/uniform.h		\
		 Camgen/unpack_vert.h		\
		 Camgen/unused.h		\
		 Camgen/utils.h			\
		 Camgen/vec_prop_fg.h		\
		 Camgen/vec_prop_ug.h		\
		 Camgen/vector.h		\
		 Camgen/vector_contr.h		\
		 Camgen/vector_particle.h	\
		 Camgen/vertex.h		\
		 Camgen/vertex_comp.h		\
		 Camgen/vff.h			\
		 Camgen/vff5.h			\
		 Camgen/vffL.h			\
		 Camgen/vffLR.h			\
		 Camgen/vffR.h			\
		 Camgen/vffVA.h			\
		 Camgen/vss.h			\
		 Camgen/vvv.h			\
		 Camgen/vvvv.h			\
		 Camgen/Weyl_basis.h		\
		 Camgen/whist.h			\
		 Camgen/width_scheme.h		\
		 Camgen/WZM.h
